# n-body-problem

./: .gitignore  Cargo.toml  package.ps1
src/: main.rs  planets.rs  ui.rs  world.rs
