[package]
name = "n-body-problem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.1"
bevy-inspector-egui = "0.23.4"
bevy_egui = "0.26.0"
bevy_prototype_debug_lines = "0.11.1"
iyes_perf_ui = "0.2.3"
